--- a/ASPPhotos/Views/Shared/_Layout.cshtml
+++ b/ASPPhotos/Views/Shared/_Layout.cshtml
@@ -30,8 +30,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">List</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Add">Add</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
             </div>
